--- a/style.css
+++ b/style.css
@@ -136,13 +136,20 @@ h1,h2,h3{
 }
 
 /* ----projects---- */
+.project_head{
+  text-align: left;
+  padding-top: 50px;
+  font-size: 3rem;
+  position: static;
+}
+
 .projects{
   padding: 50px 0;
   text-align: left;
 }
 
 .projects_row{
-  padding: 50px 0;
+  padding: 40px 0;
   width: 45%;
 }
 
@@ -153,6 +160,12 @@ h1,h2,h3{
 }
 
 .projects_discription{
+  color: white;
+    font-size: 1.1rem;
+}
+
+.project_files{
+  font-size: 1.2rem;
   color: white;
 }
 
@@ -176,6 +189,28 @@ h1,h2,h3{
  and (max-device-width: 600px)
  and (min-device-width: 220px)
 {
+
+  .btn{
+    width: 25%;
+    font-size: 42px;
+  }
+
+  .about-sec{
+    border-radius: 30px;
+  }
+
+  .about-head{
+    font-size: 4rem;
+  }
+
+  .about-discription{
+    font-size: 2.5rem;
+  }
+
+  .project_head{
+    text-align: center;
+  }
+  
   .projects{
     text-align: center;
   }
@@ -183,9 +218,24 @@ h1,h2,h3{
   .projects_row{
     width: 100%;
   }
+
+  .projects_gif{
+    width: 85%;
+    border-radius: 10px;
+  }
+
+  .projects_head{
+    font-size: 3rem;
+  }
   .projects_discription{
-    margin: 0 15% 0 15%;
+    margin: 0 6% 0 6%;
     text-align: center;
+    font-size: 1.9rem;
+  }
+
+  .project_files{
+    font-size: 1.7rem;
+    line-height: 2
   }
 
 }
